istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
      annotations:
        sidecar.istio.io/inject: 'true'        
    spec:
      containers:
        - args:
            - --provider=keycloak
            - --provider-display-name="Keycloak"
            - --client-id=istio-client
            - --client-secret=istio-secret
             --email-domain=justin-tech.com
            # - --pass-access-token=true
            # - --pass-authorization-header=true
            # - --set-authorization-header=true
            - --oidc-issuer-url=https://${keycloak_route}/auth/realms/ocp
            - --login-url=https://${keycloak_route}/auth/realms/ocp/protocol/openid-connect/auth
            - --redeem-url=https://${keycloak_route}/auth/realms/ocp/protocol/openid-connect/token
            - --validate-url=https://${keycloak_route}/auth/realms/ocp/protocol/openid-connect/userinfo
            - --http-address=0.0.0.0:4180
            # - --cookie-expire=4h0m0s
            # - --whitelist-domain=".${keycloak_route}"
            # - --cookie-domain=.${keycloak_route}
            - --standard-logging=true
            - --auth-logging=true
            - --request-logging=true
            # - --skip-provider-button=true
            # - --upstream=static://
            - --ssl-insecure-skip-verify=true
          image: quay.io/pusher/oauth2_proxy:v5.1.0
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
