istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauthproxy-service
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
      prefix: /oauth2_proxy
    route:
    - destination:
        host: oauthproxy-service
        port:
          number: 4180
      weight: 100
